<resources>
    <string name="app_name">PopcornApp</string>

    <!-- Splash Screen Activity -->
    <string name="activity_splash_screen_description">Splash Screen</string>
    <string name="activity_splash_screen_image_description">Splash Screen Image</string>

    <!-- Search Movie Activity -->
    <string name="activity_search_movie_popcorn_image_description">Popcorn image</string>
    <string name="activity_search_movie_search_image_description">Search image</string>
    <string name="activity_search_movie_find">Find\u0020</string>
    <string name="activity_search_movie_the_movie">the movie</string>
    <string name="activity_search_movie_trending_movies">Trending movies</string>
    <string name="activity_search_movie_please_type_a_movie_title">Please type a movie title</string>
    <string name="activity_search_movie_no_movie_found">No movie found with this title</string>
    <string name="activity_search_movie_carousel_image_description">Carousel image</string>

    <!-- Movies List Activity -->
    <string name="activity_movies_list_movie_details_placeholder">PG-13 | 3h 14min | Drama, Romance | 19 July 1997 (SUA) PG-13 | 3h 14min | Drama, Romance | 19 July 1997 (</string>
    <string name="activity_movies_list_rate_this">Rate\nThis</string>

    <!--General Strings-->
    <string name="loading_progress_dialog_message_please_wait">Please wait. Loading&#8230;</string>
    <string name="no_internet_connection_dialog_message">Please check your internet connection and try again</string>
    <string name="dialog_general_error_response_message">Error. Please try again later</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_title_warning">Info</string>
</resources>
