<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.movie.popcornapp.activities.searchmovie.SearchMovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upperContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/middleContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/activity_search_movie_popcorn_image_description"
                android:src="@mipmap/popcorn_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middleContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottomContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upperContainer">

            <LinearLayout
                android:id="@+id/findTheMovieContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <TextView
                    android:id="@+id/findTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margins_left_right_text_input"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/activity_search_movie_find"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_very_large"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/theMovieTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/activity_search_movie_the_movie"
                    android:textColor="@color/colorLightGray"
                    android:textSize="@dimen/text_size_very_large"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/searchIconStatic"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margins_left_right_text_input"
                    android:contentDescription="@string/activity_search_movie_search_image_description"
                    android:src="@drawable/search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/searchEditTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <EditText
                    android:id="@+id/searchMovieEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:paddingRight="10dp"
                    android:text="@={viewModel.movieEditText}"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_very_large" />

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="@dimen/margins_left_right_text_input"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="@{view -> viewModel.searchForMovie()}"
                    android:contentDescription="@string/activity_search_movie_search_image_description"
                    android:focusable="true"
                    android:src="@drawable/search" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margins_left_right_text_input"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margins_left_right_text_input"
                android:background="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="@id/findTheMovieContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middleContainer">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendingMoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="@dimen/margins_left_right_text_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/trendingMoviesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins_left_right_text_input"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/activity_search_movie_trending_movies"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toTopOf="@+id/trendingMoviesRecyclerView"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
